# llmmanager

./: .gitignore  Makefile  README.md  bump_version.py  install.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
llmmanager/: __init__.py  __main__.py  app.py  constants.py  exceptions.py
llmmanager/benchmarks/: metrics.py  mlperf_runner.py  probes.py  runner.py
llmmanager/config/: defaults.py  manager.py  schema.py
llmmanager/css/: app.tcss
llmmanager/gpu/: amd.py  base.py  cpu_only.py  detector.py  intel.py  nvidia.py
llmmanager/hub/: cloud_models.py  huggingface.py  ollama_library.py  vram_estimator.py
llmmanager/models/: benchmark.py  gpu.py  llm_model.py  server.py
llmmanager/notifications/: manager.py
llmmanager/screens/: api_panel.py  benchmarks.py  chat.py  dashboard.py  gpu.py  logs.py  model_mgmt.py  profiles.py  server_mgmt.py  setup_wizard.py
llmmanager/servers/: base.py  port_checker.py  process_manager.py  registry.py
llmmanager/servers/llamacpp/: api_client.py  flags.py  installer.py  server.py
llmmanager/servers/lmstudio/: flags.py  server.py
llmmanager/servers/ollama/: api_client.py  flags.py  installer.py  server.py
llmmanager/servers/vllm/: api_client.py  flags.py  installer.py  server.py
llmmanager/services/: download_manager.py  log_tailer.py  poller.py
llmmanager/widgets/: confirm_dialog.py  endpoint_badge.py  flag_form.py  gpu_meter.py  log_view.py  paste_dialog.py  server_card.py  sudo_dialog.py  version_picker.py
tests/: smoke_test.py
