[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmmanager"
version = "0.1.1"
description = "TUI control panel for LLM server stacks (Ollama, vLLM, llama.cpp, LM Studio)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "jonathjan0397" }]
keywords = ["llm", "ollama", "vllm", "llama-cpp", "tui", "ai", "gpu", "benchmark", "lm-studio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Systems Administration",
    "Topic :: Terminals",
]
dependencies = [
    # TUI framework
    "textual>=0.70.0",
    # Config / validation
    "pydantic>=2.7.0",
    "tomli-w>=1.0.0",
    # Async HTTP
    "httpx[http2]>=0.27.0",
    "anyio>=4.4.0",
    # GPU telemetry (nvidia-ml-py is the canonical package; pynvml is deprecated)
    "nvidia-ml-py>=12.0.0",
    # System metrics
    "psutil>=6.0.0",
    # HuggingFace Hub
    "huggingface-hub>=0.23.0",
    # Clipboard
    "pyperclip>=1.8.2",
    # Rich (explicit, bundled with textual but used directly)
    "rich>=13.7.0",
    # Date utilities
    "python-dateutil>=2.9.0",
    # Platform-specific config/data directories
    "platformdirs>=4.0.0",
    # Async file I/O (used by log tailer)
    "aiofiles>=23.0.0",
]

[project.urls]
Homepage   = "https://github.com/jonathjan0397/llmmanager"
Repository = "https://github.com/jonathjan0397/llmmanager"
Issues     = "https://github.com/jonathjan0397/llmmanager/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-textual-snapshot>=0.4.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
llmmanager = "llmmanager.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["llmmanager"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
